2014-02-07  Charlie Zender  <zender@uci.edu>

	* Change cell_methods to agree with actual method used for coordinates

	* Change ncwa behavior to comply with longstanding intent & documentation that coordinate
	variables always return averages, never extrema or other statistics.
	ncra and nces have long-implemented this convention.

2014-02-06  Pedro Vicente  <pvicente@uci.edu>

	* Add test data for cell_methods CF attribute convention

	* ncks regression #58, #59, #60 cell_methods CF attribute convention (create average and maximum, append)

2014-02-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.2 release procedure:
 	Changes since nco-4_4_1: bugfixes for ncra.c memory, LLVM/clang builds, -X
	cd ~/nco;cvs tag -d nco-4_4_2;cvs tag -d nco-4_4_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.2 release"
	cvs tag -c nco-4_4_2;cvs tag -c nco-4_4_2-1

	* Start node printing for JSON

2014-02-05  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #89 -X and associated coordinates

2014-02-05  Charlie Zender  <zender@uci.edu>

	* Add W10N/JSON stubs

	* Improve documentation build rules in ./configure

	* Explicitly add -Wuninitialized -Wmaybe-uninitialized to GCC in bld/Makefile

2014-02-04  Charlie Zender  <zender@uci.edu>

	* Pass same Make arguments to clang/LLVM as to gcc/GCC

	* Add byte/ubyte-valued nco_var_avg_rdc_ttl()/_min()/max()
	Was bug in native-byte arithmetic but NCO usually promotes to double...

	* Fix Clang/LLVM compiler warnings: nco_fl_blocksize() and nco_cnk_ini() prototypes,
	self-assign CEWI compiler warnings (now add zero).

2014-02-04  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #88 -X writing and associated coordinates

2014-02-02  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #90 -X writing and associated coordinates

2014-02-01  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #83 Test 'standard_name' attribute for "longitude" and "latitude" values

2014-01-31  Charlie Zender  <zender@uci.edu>
