@@ -1,6 +1,6 @@
 package NCO_rgr;
 
-# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.437 2014-02-07 20:16:28 zender Exp $
+# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.438 2014-02-07 21:51:59 pvicente Exp $
 
 # Purpose: All REGRESSION tests for NCO operators
 # BENCHMARKS are coded in "NCO_benchmarks.pm"
@@ -4137,7 +4137,27 @@ print "\n";
     $tst_cmd[2]="__";
     $tst_cmd[3]="SS_OK";   
     NCO_bm::tst_run(\@tst_cmd);
-    $#tst_cmd=0; # Reset array 		
+    $#tst_cmd=0; # Reset array 	
+
+
+	#### Group tests	
+	if($HAVE_NETCDF4_H == 1){
+	
+#NEW 4.4.2	
+#ncra #32
+#ncra -O -v time301 -C in_grp_3.nc out.nc
+
+    $dsc_sng="(Groups) Cell methods (Create) -v time301";
+    $tst_cmd[0]="ncra $omp_flg $nco_D_flg -O -v time301 $in_pth_arg in_grp_3.nc %tmp_fl_00%";
+    $tst_cmd[1]="ncks -m %tmp_fl_00%";
+    $tst_cmd[2]="time301 attribute 1: cell_methods, size = 14 NC_CHAR, value = time301: mean";
+    $tst_cmd[3]="SS_OK";
+    NCO_bm::tst_run(\@tst_cmd);
+    $#tst_cmd=0; # Reset array	
+
+	} #### Group tests		
+
+	
 
 #print "paused - hit return to continue"; my $wait=<STDIN>;
 #print "<<<STOP>>>- hit return to continue"; my $wait=<STDIN>;
@@ -4850,7 +4870,6 @@ print "\n";
     NCO_bm::tst_run(\@tst_cmd);
     $#tst_cmd=0; # Reset array		
 
-	#time302 attribute 1: cell_methods, size = 31 NC_CHAR, value = time302: mean time302: maximum
 	
 #NEW 4.4.2	
 #ncwa #60
