@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.502 2014-02-07 19:23:14 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.503 2014-02-07 21:52:00 pvicente Exp $ */
 
 /* This single source file compiles into three separate executables:
    ncra -- netCDF record averager
@@ -137,8 +137,8 @@ main(int argc,char **argv)
   char *sng_cnv_rcd=NULL_CEWI; /* [sng] strtol()/strtoul() return code */
   char trv_pth[]="/"; /* [sng] Root path of traversal tree */
 
-  const char * const CVS_Id="$Id: ncra.c,v 1.502 2014-02-07 19:23:14 pvicente Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.502 $";
+  const char * const CVS_Id="$Id: ncra.c,v 1.503 2014-02-07 21:52:00 pvicente Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.503 $";
   const char * const opt_sht_lst="3467ACcD:d:FG:g:HhL:l:n:Oo:p:P:rRt:v:X:xY:y:-:";
 
   cnk_sct cnk; /* [sct] Chunking structure */
@@ -715,6 +715,20 @@ main(int argc,char **argv)
 
   /* Turn off default filling behavior to enhance efficiency */
   (void)nco_set_fill(out_id,NC_NOFILL,&fll_md_old);
+
+  /* Add cell_methods attributes (before exiting define mode) */
+  if(nco_prg_id == ncra ){
+    dmn_sct **dmn=NULL_CEWI;
+    int nbr_dmn=0;
+    /* Allocate  */
+    dmn=(dmn_sct **)nco_malloc(nbr_dmn_fl*sizeof(dmn_sct *));
+    /* Find dimensions associated with variables to be extracted */
+    (void)nco_dmn_lst_ass_var_trv(in_id,trv_tbl,&nbr_dmn,&dmn);
+    /* Add cell_methods attributes (pass as dimension argument all dimensions to be extracted) */
+    rcd+=nco_cnv_cf_cll_mth_add(out_id,var_prc_out,nbr_var_prc,dmn,nbr_dmn,nco_op_typ,gpe,trv_tbl); 
+    /* Free  */
+    if(nbr_dmn > 0) dmn=nco_dmn_lst_free(dmn,nbr_dmn);
+  }
 
   /* Take output file out of define mode */
   if(hdr_pad == 0UL){
